Use Java's http client instead of using a external dependency